# Global-Opt

./: CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md  build.sh  makefile
R/: test_functions.R  wrapper.R
cinterface/: CMakeLists.txt
cinterface/include/: methods.h  utils.h
cinterface/sources/: CMakeLists.txt  interface.cpp  methods.cpp
doc/: Diplom.odt  report_template.md
doc/tests_results/: performance_table.txt
src/: CMakeLists.txt  interface.c  methods.h
src/include/: evolvnet.h  methods.h  utils.h
src/sources/: CMakeLists.txt  agp_search.cpp  agp_search_n.cpp  evolvnet.cpp  interface.cpp  methods.cpp
tests/: build.sh  direct_search.c  test.R
tests/performance/: agp_plain.cpp  makefile
